package ca.dheri.aqhi;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class AqhiApplication {
	public static void main(String[] args) {
		SpringApplication.run(AqhiApplication.class, args);
	}

}
