package ca.dheri.aqhi.model.pojo;

import java.util.ArrayList;

public class Geometry{
    public String type;
    public ArrayList<Double> coordinates;
}

