package ca.dheri.aqhi.model.pojo;

public class Link {
    public String type;
    public String rel;
    public String title;
    public String href;
}
